Reduced font size of tagline

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -103,8 +103,10 @@ main {
     }
     .tagline {
       text-align: center;
-      font-size: 22px;
+      font-size: 16px;
       margin-top: 0px;
+      margin-right: 25px;
+      margin-left: 25px;
       color: #aaa;
       white-space: pre-wrap;
       line-height: normal;
